[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "filesystem",
    "os",
    "parsing",
]
description = "Read partitions from block devices or files"
license = "MIT"
name = "bootsector"
readme = "README.md"
repository = "https://github.com/FauxFaux/bootsector"
version = "0.2.0"

edition = "2018"

[dependencies]
crc = "2"
positioned-io2 = { version = "0.3", default-features = false }
acid_io = { version = "0.1.0", default-features = false }

[features]
default = ["std"]
std = ["positioned-io2/std", "acid_io/std"]

[patch.crates-io]
positioned-io2 = { git = "https://github.com/oberien/positioned-io2", branch = "no_std" }
